# claude-throne

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONSTITUTION.md  Claude-Throne v1.4.5 bug fixes.md  FIXES-v1.4.13.md  FIXES-v1.4.15.md  FIXES-v1.4.16.md  FIXES-v1.4.17.md  FIXES-v1.4.19.md  FIXES-v1.5.0.md  IMPLEMENTATION_PLAN.md  LICENSE  MemorySystem.md  OPENROUTER-TOOL-INVESTIGATION.md  OPENROUTER_SDK_ENHANCEMENTS.md  README.md  VERIFICATION-v1.5.0.md  claude-throne-1.4.10.vsix  claude-throne-1.4.11.vsix  claude-throne-1.4.5.vsix  claude-throne-1.4.6.vsix  claude-throne-1.4.8.vsix  claude-throne-1.4.9.vsix  index.js  key-resolver.js  models-capabilities.json  openrouter-params.js  package-lock.json  package.json  panel-reference-layout.html  test-xml-parser.js  transform.js  transformers.js  xml-tool-formatter.js  xml-tool-parser.js
.beads/: claude-throne.db  issues.jsonl
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.letta/: settings.json  settings.local.json
backends/python/ct_secretsd/: Makefile  README.md  pyproject.toml  setup.sh
backends/python/ct_secretsd/ct_secretsd/: __init__.py  __main__.py  app.py  main.py  providers.py  proxy_controller.py  storage.py
docs/: ARCHITECTURE.md  BACKEND-GUIDE.md  COMPLETION_SUMMARY.md  Claude-Throne-PRD.md  Claude-Throne-Prompt.md  Claude‑Throne PRD and Task List.md  FIXES-v1.4.12.md  FIXES-v1.4.14.md  FIXES-v1.4.18.md  FIXES-v1.5.11.md  GUARDRAILS_COMPLETE.md  IMPLEMENTATION_STATUS.md  MCP-Config-Converter.md  NEXT-VERSION.md  Notes - v1.5.23 - 1.5.md  PHASE6_HANDOFF.md  README.md  REMAINING_WORK.md  SESSION-SUMMARY-v1.5.0.md  WEBVIEW-GUIDE.md  advanced-setup.md  deepseek_glm.md
scripts/: create-pr-and-release.sh  package-vsix.sh  smoke.sh
tests/: auth.headers.test.js  contract.test.js  contracts.messages.schema.test.js  (+30 more)
(+73 files in other folders)
